# serializer version: 1
# name: TestDXX_RebirthGenerator.test_generate[descent1/descent.d1x]
  tuple(
    list([
      'd1x-rebirth',
      '-hogdir',
      '/userdata/roms/dxx-rebirth/descent1',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
    }),
  )
# ---
# name: TestDXX_RebirthGenerator.test_generate[descent1/descent.d1x][config]
  '''
  ResolutionX=1920
  ResolutionY=1080
  WindowMode=0
  VSync=0
  TexFilt=0
  TexAnisotropy=0
  Multisample=0
  
  '''
# ---
# name: TestDXX_RebirthGenerator.test_generate[descent2/descent.d2x]
  tuple(
    list([
      'd2x-rebirth',
      '-hogdir',
      '/userdata/roms/dxx-rebirth/descent2',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
    }),
  )
# ---
# name: TestDXX_RebirthGenerator.test_generate[descent2/descent.d2x][config]
  '''
  ResolutionX=1920
  ResolutionY=1080
  WindowMode=0
  VSync=0
  TexFilt=0
  TexAnisotropy=0
  Multisample=0
  
  '''
# ---
# name: TestDXX_RebirthGenerator.test_generate_config[{'rebirth_anisotropy': '1'}][config]
  '''
  ResolutionX=1920
  ResolutionY=1080
  WindowMode=0
  VSync=0
  TexFilt=0
  TexAnisotropy=1
  Multisample=0
  
  '''
# ---
# name: TestDXX_RebirthGenerator.test_generate_config[{'rebirth_filtering': '1'}][config]
  '''
  ResolutionX=1920
  ResolutionY=1080
  WindowMode=0
  VSync=0
  TexFilt=1
  TexAnisotropy=0
  Multisample=0
  
  '''
# ---
# name: TestDXX_RebirthGenerator.test_generate_config[{'rebirth_filtering': '2'}][config]
  '''
  ResolutionX=1920
  ResolutionY=1080
  WindowMode=0
  VSync=0
  TexFilt=2
  TexAnisotropy=0
  Multisample=0
  
  '''
# ---
# name: TestDXX_RebirthGenerator.test_generate_config[{'rebirth_multisample': '1'}][config]
  '''
  ResolutionX=1920
  ResolutionY=1080
  WindowMode=0
  VSync=0
  TexFilt=0
  TexAnisotropy=0
  Multisample=1
  
  '''
# ---
# name: TestDXX_RebirthGenerator.test_generate_config[{'rebirth_vsync': '1'}][config]
  '''
  ResolutionX=1920
  ResolutionY=1080
  WindowMode=0
  VSync=1
  TexFilt=0
  TexAnisotropy=0
  Multisample=0
  
  '''
# ---
# name: TestDXX_RebirthGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': 'KEY_F2',
      'pause': 'KEY_F2',
      'restore_state': list([
        'KEY_LEFTALT',
        'KEY_LEFTSHIFT',
        'KEY_F2',
      ]),
      'save_state': list([
        'KEY_LEFTALT',
        'KEY_F2',
      ]),
    }),
    'name': 'dxx_rebirth',
  })
# ---
